[package]

name = "libpcp"
version = "0.7.0"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "A constraint solver supporting arithmetic constraints over integers."
repository = "https://github.com/ptal/pcp"
documentation = "https://docs.rs/crate/libpcp"
readme = "README.md"
keywords = ["constraint", "satisfiability", "solving", "CSP", "combinatorial"]
categories = ["mathematics", "science"]
license = "Apache-2.0"

[lib]

name = "pcp"
path = "src/libpcp/lib.rs"
crate_type = ["rlib", "dylib"]

[dependencies]
